# tlwl-workflows-ai

./: .gitignore  clustering.ipynb  pyproject.toml  topic_generation_workings.ipynb
common/: base_agent.py  db.py  llm.py
content_gen/data/: load_metadata.py
data/: out_df.csv
topic_gen/: prompt.py  topic_gen.py
topic_gen/agent/: agent.py  prompt.py
topic_gen/clustering/: cluster.py
topic_gen/data/: cleanup.py  data.py
topic_gen/input/: inject_data.py
